# openscan-pipeline

./: .gitignore  LICENSE  README.md  STATUS.md  pyproject.toml
docs/: autonomous_session_log.md  performance_plan.md  phase_c_session_log.md  test_scan_plan.md
docs/future/: ai_focus_blender.py
docs/future/llm_prompts/: focus_blending_prompt.md
src/: batch_process.py  calibrate.py  calibrate_guided.py  colmap_reconstruct.py  demosaic.py  focus_stacker.py  pipeline_orchestrator.py  pose_metadata.py
tests/: integration_test_a10.py
